# qtcmake

./: .gitmodules  CMakeLists.txt  README.md  build.sh
